        efficient replacement of \code{sapply(x, length)} and similar.

        R-3.3.0: \code{lengths()} considers methods for \code{length}
        and \code{[[} on \code{x}, so it should work automatically on
        any objects for which appropriate methods on those generics
        are defined.
}}

  \subsection{BUG FIXES}{
  \itemize{
  \item The documentation on \code{debug} and \code{debugonce} has been
        fixed to remove mention of the \code{text} and \code{condition} 
        arguments. These arguments were documented in R-2.10.0, and in 
        subsequent R Core versions to at least R-3.4.1, but they have never 
        been implemented as documented, but rather have always been 
        completely ignored.
  \item Fixed two pqR bugs illustrated by the following:
\preformatted{    a <- c(2,3); e <- new.env(); e[["x"]] <- a; a[2] <- 9; e$x[2]
    L <- list(1,2); y <- list(2+1); L[2] <- y; y[[1]][1] <- 9; L[[2]]
}
        For both lines above, the value printed was 9 rather than 3.
  \item Previously, \code{length(plist)<-n} did not work when \code{plist}
        was a pairlist, but it does now.  This bug also exists in R Core
        versions to at least R-3.4.1.
  \item Fixed a bug illustrated by the following:
\preformatted{    L <- list(c(3,4))
    M <- matrix(L,2,2)
    M[[1,1]][1] <- 9
    L
}
        In the value printed for \code{L}, \code{L[[1]][1]} had changed to 9.
        This bug also exists in R-3.4.1.
  \item Fixed a bug illustrated by the following:
\preformatted{    a <- as.integer(NA); e <- new.env(size=a); print(a)
}
        The value printed was previously 0 rather than NA.
        This bug also exists in R Core versions to at least R-3.4.1.
  }}
}


\section{CHANGES IN VERSION RELEASED 2017-06-09}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item pqR now uses a new garbage collector and new schemes for memory
        layout.  Objects are represented more compactly, much more compactly